@@ -884,6 +884,7 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
 * (bug 3761) Avoid deprecation warnings in Special:Import
 * (bug 2885) Remove unnecessary reference parameter which broke classic skin
   talk notification on PHP 5.0.5
+* (bug 3845) Update attribute.php for 1.5 schema
 
 
 === Caveats ===
